@@ -275,6 +275,7 @@ class MysqlUpdater extends DatabaseUpdater {
 			array( 'dropTable', 'hitcounter' ),
 			array( 'dropField', 'site_stats', 'ss_total_views', 'patch-drop-ss_total_views.sql' ),
 			array( 'dropField', 'page', 'page_counter', 'patch-drop-page_counter.sql' ),
+			array( 'addField', 'externallinks', 'el_from_namespace', 'patch-el_from_namespace.sql' ),
 		);
 	}
 
