@@ -423,7 +423,10 @@ class PostgresUpdater extends DatabaseUpdater {
 			array( 'dropTable', 'hitcounter' ),
 			array( 'dropField', 'site_stats', 'ss_total_views', 'patch-drop-ss_total_views.sql' ),
 			array( 'dropField', 'page', 'page_counter', 'patch-drop-page_counter.sql' ),
-			array( 'dropFkey', 'recentchanges', 'rc_cur_id' )
+			array( 'dropFkey', 'recentchanges', 'rc_cur_id' ),
+
+			// 1.26
+			array( 'addPgField', 'externallinks', 'el_from_namespace', 'INTEGER NOT NULL DEFAULT 0' ),
 		);
 	}
 
